[project]
name = "wordpuzzle-openenv"
version = "0.1.0"
description = "WordPuzzle — A Wordle-style mini-game RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "pydantic",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
